@@ -169,6 +169,7 @@
                             <goal>jpackage</goal>
                         </goals>
                         <configuration>
+                            <linuxDebMaintainer>olden@ukr-com.net</linuxDebMaintainer>
                             <skip>${jpackage.skip.deb}</skip>
                             <name>onlinemanager</name>
                             <appVersion>${project.version}</appVersion>
@@ -178,6 +179,12 @@
                             <destination>${project.build.directory}/jpackage</destination>
                             <linuxShortcut>true</linuxShortcut>
                             <linuxPackageName>onlinemanager</linuxPackageName>
+                            <additionalDependencies>
+                                <additionalDependency>--add-modules java.desktop</additionalDependency>
+                            </additionalDependencies>
+                            <javaOptions>
+                                <option>--no-sound</option>
+                            </javaOptions>
                         </configuration>
                     </execution>
 
